Separate "operational" services from "essential"